--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ add_definitions(-D_USE_MATH_DEFINES)
 # Dependencies
 #-------------------------------------------------------------------
 
-find_package(OpenCV 3.2 REQUIRED)
+find_package(OpenCV REQUIRED)
 find_package(Eigen3 REQUIRED)
 
 include_directories(
