working cheirality check

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,8 @@ include_directories(
 # Executables generation
 #-------------------------------------------------------------------
 
-add_executable(main main.cpp)
-target_link_libraries(main ${OpenCV_LIBS} ${EIGEN3_LIBS})
+add_executable(main_essential main_essential.cpp)
+target_link_libraries(main_essential ${OpenCV_LIBS} ${EIGEN3_LIBS})
 
 add_executable(main_homography main_homography.cpp)
 target_link_libraries(main_homography ${OpenCV_LIBS} ${EIGEN3_LIBS})
